selinux: refactor symtab helper functions to hashtab
Currently, when one needs a hash table with string keys, they have two
options. Either use symtab, which could be unoptimal if they do not need
the nprim attribute or write their own hash and compare functions.

This patch refactors hash and compare helper functions from symtab to
hashtab and adds helper functions for inserting and searching string
keys without the need to write own hash and compare functions.

--- a/security/selinux/Makefile
+++ b/security/selinux/Makefile
@@ -14,7 +14,7 @@ ccflags-y := -I$(srctree)/security/selinux -I$(srctree)/security/selinux/include
 
 selinux-y := avc.o hooks.o selinuxfs.o netlink.o nlmsgtab.o netif.o \
 	     netnode.o netport.o status.o \
-	     ss/ebitmap.o ss/hashtab.o ss/symtab.o ss/sidtab.o ss/avtab.o \
+	     ss/ebitmap.o ss/hashtab.o ss/sidtab.o ss/avtab.o \
 	     ss/policydb.o ss/services.o ss/conditional.o ss/mls.o ss/context.o
 
 selinux-$(CONFIG_SECURITY_NETWORK_XFRM) += xfrm.o
